tests/machine/x/c/group_items_iteration.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_items_iteration.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:201:23: error: incompatible types when assigning to type ‘int’ from type ‘struct <anonymous>’
  201 |     tmp7.data[tmp8] = g;
      |                       ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:210:34: error: request for member ‘items’ in something not a structure or union
  210 |     for (int tmp12 = 0; tmp12 < g.items.len; tmp12++) {
      |                                  ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:211:21: error: request for member ‘items’ in something not a structure or union
  211 |       DataItem x = g.items.data[tmp12];
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:216:38: error: request for member ‘key’ in something not a structure or union
  216 |     map_int_bool_put(&tmp14, "tag", g.key);
      |                                      ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:216:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  216 |     map_int_bool_put(&tmp14, "tag", g.key);
      |                              ^~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:78:51: note: expected ‘int’ but argument is of type ‘char *’
   78 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:217:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  217 |     map_int_bool_put(&tmp14, "total", total);
      |                              ^~~~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:78:51: note: expected ‘int’ but argument is of type ‘char *’
   78 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:220:21: error: incompatible types when assigning to type ‘int’ from type ‘map_int_bool’
  220 |     tmp15.data[0] = tmp14;
      |                     ^~~~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:221:38: error: incompatible type for argument 1 of ‘concat_list_int’
  221 |     list_int tmp16 = concat_list_int(tmp13, tmp15);
      |                                      ^~~~~
      |                                      |
      |                                      int *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:97:42: note: expected ‘list_int’ but argument is of type ‘int *’
   97 | static list_int concat_list_int(list_int a, list_int b) {
      |                                 ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:222:9: error: assignment to expression with array type
  222 |     tmp = tmp16;
      |         ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:231:21: error: request for member ‘tag’ in something not a structure or union
  231 |     tmp21[tmp19] = r.tag;
      |                     ^

   1: // Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:10Z
